--- a/problem/templates/problem/editTab/info.html
+++ b/problem/templates/problem/editTab/info.html
@@ -6,21 +6,9 @@
       <td>
   </tr>
   <tr>
-    <th style="width:20%">Parent PID:</th>
+    <th style="width:20%">Owner</th>
     <td>
-      <input class="form-control" name="ppid">
-      <td>
-  </tr>
-  <tr>
-    <th style="width:20%">Problemsetter:</th>
-    <td>
-      <input class="form-control" name="probSetter">
-      <td>
-  </tr>
-  <tr>
-    <th style="width:20%">Anonymous:</th>
-    <td>
-      <input type="checkbox" value="anony" name='anony'>
+      <input class="form-control" name="owner">
       <td>
   </tr>
   <tr>
