--- a/contest/templates/contest/overview.html
+++ b/contest/templates/contest/overview.html
@@ -25,5 +25,5 @@
   </tbody>
 </table>
 {% load staticfiles %}
-<link href="{% static 'oj/css/overview.css' %}" rel="stylesheet">
-<script src="{%static 'oj/js/overview.js'%}"></script>
+<link href="{% static 'contest/css/overview.css' %}" rel="stylesheet">
+<script src="{%static 'contest/js/overview.js'%}"></script>
