--- a/problem/templates/problem/editTab/testcase.html
+++ b/problem/templates/problem/editTab/testcase.html
@@ -6,18 +6,15 @@
     <th></th>
   </tr>
   <tr>
-    <script>
-    $("#edit").tooltip('hide');
-    </script>
     <td>
       <span id='inFileTooltip' data-toggle="tooltip" data-placement="top" title="Edit">
-                <a data-toggle='modal' data-target='#editInputFile'>1.in</a>
-            </span>
+        <a>1.in</a>
+      </span>
     </td>
     <td>
       <span id='outFileTooltip' data-toggle="tooltip" data-placement="top" title="Edit">
-                <a data-toggle='modal' data-target='#editOutputFile'>1.out</a>
-            </span>
+        <a>1.out</a>
+      </span>
     </td>
     <script>
     $("#inFileTooltip").tooltip('hide');
@@ -30,9 +27,8 @@
       <input type="number" value="32">
     </td>
     <td>
+      <button class="btn btn-primary" onclick="return false" data-toggle='modal' data-target='#edit_testcase'>Edit</button>
       <button class="btn btn-primary" onclick="return false">Update</button>
-    </td>
-    <td>
       <button class="btn btn-primary" onclick="return false">Delete</button>
     </td>
   </tr>
@@ -65,7 +61,7 @@
   </tr>
 </table>
 
-<div class='modal fade' id='editInputFile'>
+<div class='modal fade' id='edit_testcase'>
   <div class='modal-dialog modal-sm'>
     <div class='modal-content'>
       <div class='modal-header'>
@@ -73,29 +69,12 @@
           <span aria-hidden='true'>&times;</span>
           <span class='sr-only'>Close</span>
         </button>
-        <h4 class='modal-title'>Edit Input File</h4>
+        <h4 class='modal-title'>Edit Testcase</h4>
       </div>
       <div class='modal-body'>
-        <input type='file'>
-      </div>
-      <div class='modal-footer'>
-        <button class='btn btn-info' data-dismiss='modal'>Save changes</button</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class='modal fade' id='editOutputFile'>
-  <div class='modal-dialog modal-sm'>
-    <div class='modal-content'>
-      <div class='modal-header'>
-        <button type='button' class='close' data-dismiss='modal'>
-          <span aria-hidden='true'>&times;</span>
-          <span class='sr-only'>Close</span>
-        </button>
-        <h4 class='modal-title'>Edit output File</h4>
-      </div>
-      <div class='modal-body'>
+        <p>Input</p>
+        <input type='file'><br>
+        <p>Output</p>
         <input type='file'>
       </div>
       <div class='modal-footer'>
