--- a/contest/templates/contest/scoreboard.html
+++ b/contest/templates/contest/scoreboard.html
@@ -7,8 +7,8 @@
 <h3>{{ contest.name }}</h3>
 
 {% load staticfiles %}
-<script src="{% static 'oj/js/scoreboard.js' %}"></script>
-<link href="{% static 'oj/css/scoreboard.css' %}" rel="stylesheet">
+<script src="{% static 'contest/js/scoreboard.js' %}"></script>
+<link href="{% static 'contest/css/scoreboard.css' %}" rel="stylesheet">
 
 <table class="table" style="table-layout:fixed">
   <thead>
