--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -2,13 +2,15 @@
 <div style='height:90px;' class='panel panel-default'>
   <div style='padding-left:10px;padding-right:10px'>
     <div style='float:left;width:60%;'>
-      <h2>A Simple Problem &nbsp;&nbsp;<a href="{% url 'problem.views.edit' pid%}">EDIT</a>
-                </h2>
+      <h2>A Simple Problem &nbsp;&nbsp;<a href="{% url 'problem.views.edit' pid%}">EDIT</a></h2>
     </div>
     <div style="float:right;">
-      <h5><a>Status</a> &nbsp;|&nbsp; <a>Printable </a> &nbsp;|&nbsp; <a>Rank</a> &nbsp;|&nbsp;
-                    <a data-toggle='modal' data-target='#myModal'>Limits</a>
-                </h5>
+      <h5>
+        <a>Status</a> &nbsp;|&nbsp;
+        <a>Printable </a> &nbsp;|&nbsp; 
+        <a>Rank</a> &nbsp;|&nbsp;
+        <a data-toggle='modal' data-target='#myModal'>Limits</a>
+      </h5>
       <button class="btn btn-primary btn-lg" style='float:right'>Submit</button>
     </div>
   </div>
