add license change indent size unify quote for html and js

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -21,9 +21,7 @@
   .form-group {
     margin: 1% !important;
   }
-  .container-fluid {
-    margin-top: 5%;
-  }
+
   </style>
 </head>
 
@@ -65,9 +63,7 @@
     </div>
   </div>
   <div class='container-fluid'>
-    {% block body_block %}
-    
-    {% endblock body_block %}
+    {% block body_block %} {% endblock body_block %}
   </div>
   <footer class='bs-docs-footer-links muted container-fluid'>
     <div class='col-lg-4'>
