--- a/users/templates/users/code_editor.html
+++ b/users/templates/users/code_editor.html
@@ -1,3 +1,26 @@
+<!--
+The MIT License (MIT)
+
+Copyright (c) 2014 NTHUOJ team
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+-->
 {%load static%}
 <!-- code mirror related -->
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/codemirror/4.8.0/codemirror.css">
@@ -12,40 +35,43 @@
 
 <script src={% static "js/editorsettings.js" %}></script>
 <!-- file input -->
-<script src={% static "js/fileinput.js"%}></script>
+<script src="http://gregpike.net/demos/bootstrap-file-input/bootstrap.file-input.js"></script>
 
 <!-- textarea -->
 <form class="form-horizontal" style="width:80%;margin:0 auto;">
   <div class="form-group" style="margin:50px;">
 
     <div class="col-lg-2">
-      <label class="col-lg-42control-label">PID:</label>
-      <input type="text" class="form-control input-sm col-lg-2 " placeholder="id" id='pid'>
+      <label class="control-label">PID:</label>
+      <input type="text" class="form-control input-sm col-lg-2" id="pid">
     </div>
 
-    <label class="col-lg-2 control-label">Language:</label>
-    <div class="col-lg-4">
-      <div class="radio">
-        <label id='cpp' data-toggle="tooltip" data-placement="right" title="-O2  -lm  -std=c++11">
-          <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">C++
-        </label>
-      </div>
-      <div class="radio">
-        <label id='c' data-toggle="tooltip" data-placement="right" title="-O2  -lm  -std=c99">
-          <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">C
-        </label>
+    <div class="col-lg-8">
+      <label class="control-label col-lg-2">Language:</label>
+      <div class="col-lg-4">
+        <div class="radio">
+          <label id="cpp">
+            <input type="radio" name="optionsRadios" value="cpp" checked>
+            C++: -O2 -lm -std=c++11
+          </label>
+        </div>
+        <div class="radio">
+          <label id="c" data-placement="right">
+            <input type="radio" name="optionsRadios" value="c">
+            C: -O2 -lm -std=c99
+          </label>
+        </div>
       </div>
     </div>
   </div>
 
   <textarea id="code_editor" name="code"></textarea>
-  <br>
   <div class="form-group">
-    <div style='float:left;margin-left:30px;'>
+    <div style="float:left;margin-left:30px;">
       <input type="file" data-filename-placement="inside" id="fileinput">
     </div>
-    <div style='float:right;margin-right:30px;'>
-      <input type='button' class="btn btn-danger" value='Pre Test'>
+    <div style="float:right;margin-right:30px;">
+      <input type="button" class="btn btn-danger" value="Pre Test">
       <button class="btn btn-primary">Submit</button>
     </div>
   </div>
