add user level to it's rightful place

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -131,11 +131,10 @@ SOFTWARE.
               <label for="select" class="col-lg-4 control-label">User Level</label>
               <div class="col-lg-8">
                 <select class="form-control" id="select">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
+                  <option>admin</option>
+                  <option>judge</option>
+                  <option>sub-judge</option>
+                  <option>user</option>
                 </select>
               </div>
             </div>
@@ -155,7 +154,8 @@ SOFTWARE.
             <hr>
             <div class="form-group">
               <div class="col-lg-10">
-                <a href="#passwd-popup" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#passwd-modal">Update</a>
+                <a href="#passwd-popup" class="btn btn-primary btn-lg" 
+                data-toggle="modal" data-target="#passwd-modal">Update</a>
                 <span class="help-block">To update, it requires your current password.</span>
               </div>
             </div>
