--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -65,6 +65,7 @@ SOFTWARE.
         <h1 class="panel-title" style="text-align:center;">Time</h1>
       </div>
       <div class="panel-body inline">
+        <a id="server_time" hidden>{{ server_time }}</a>
         <table style="width:100%;text-align:center;">
           <tr>
             <td id="start" style="text-align:left;">{{ contest.start_time }}</td>
