--- a/contest/templates/contest/problem.html
+++ b/contest/templates/contest/problem.html
@@ -17,6 +17,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 -->
+<!--This page will be replaced by including problem page-->
 <script>
 $(document).ready(function() {
   $("a").tooltip({
