fix naming problem and title problem

--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -26,9 +26,8 @@ SOFTWARE.
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../bootstrap/favicon.ico">
 
-  <title>Starter Template for Bootstrap</title>
+  <title>Contest</title>
 
   <!-- Bootstrap core CSS -->
   {% load staticfiles %}
