--- a/contest/templates/contest/problem.html
+++ b/contest/templates/contest/problem.html
@@ -40,10 +40,5 @@ ul.center {
     {% endfor %}
   </ul>
 </div>
-<!-- include problem -->
-<h3>Hard Problem</h3>
-<button type="button" class="btn btn-primary">Submit</button>
-<hr>
-<p>jfdskljkljfdksjfljsd</p>
-<p>dsfjkjdskljflkwermknrweqkhiweqjokdv'slnx,knkhreiowjqweok</p>
-<p>efnwoinvmkmojfeiowdkopirue90u83jopk0-32ijoifrmhiklmsd</p>
+<!-- include problem in the future-->
+
