--- a/contest/static/contest/css/scoreboard.css
+++ b/contest/static/contest/css/scoreboard.css
@@ -18,6 +18,6 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 */
 
-td.firstBlood {
+td.firstSolved {
   background-color: #7FFFD4;
 }
