--- a/problem/templates/problem/editTab/info.html
+++ b/problem/templates/problem/editTab/info.html
@@ -3,19 +3,19 @@
     <th style="width:20%">Problem Name:</th>
     <td>
       <input class="form-control" name="probName">
-      <td>
+      </td>
   </tr>
   <tr>
-    <th style="width:20%">Owner</th>
+    <th style="width:20%">Owner:</th>
     <td>
       <input class="form-control" name="owner">
-      <td>
+      </td>
   </tr>
   <tr>
     <th style="width:20%">Visible:</th>
     <td>
       <input type="checkbox" value="visible" name='visible'>
-      <td>
+      </td>
   </tr>
   <tr>
     <th style="width:20%">Judge Source:</th>
@@ -27,19 +27,19 @@
         <option>ZOJ</option>
         <option>UVA</option>
       </select>
-      <td>
+      </td>
   </tr>
   <tr>
     <th style="width:20%">Real ID:</th>
     <td>
       <input class="form-control" name='realID'>
-      <td>
+      </td>
   </tr>
   <tr>
     <th style="width:20%">Problem Page:</th>
     <td>
       <input class="form-control" name='probPage'>
-      <td>
+      </td>
   </tr>
   <tr>
     <th style="width:20%">Special Judge:</th>
@@ -47,10 +47,10 @@
       <input type="radio" name="special" value='no'>No&nbsp;
       <input type="radio" name="special" value='c'>C&nbsp;
       <input type="radio" name="special" value='cpp'>C++
-      <td>
+      </td>
   </tr>
   <tr>
-    <th>Floating Point Error</th>
+    <th>Floating Point Error:</th>
     <td>
       <input type="checkbox" onclick='floatError(this)' name='float'>&nbsp;&nbsp;
       <input type="text" name="error" id="error" class='form-control' style="display:inline;width:20%">
