--- a/problem/templates/problem/editTab/tag.html
+++ b/problem/templates/problem/editTab/tag.html
@@ -1,6 +1,6 @@
 <br>
 <strong>Current Tags</strong>
-<button id='merge_tag' class='btn btn-default'>merge tags</button>
+<button id='merge_tag' class='btn btn-default'>Merge tags</button>
 <table>
   <tbody id="tagTable">
   </tbody>
