--- a/problem/templates/problem/editTab/testcase.html
+++ b/problem/templates/problem/editTab/testcase.html
@@ -78,7 +78,7 @@
         <input type='file'>
       </div>
       <div class='modal-footer'>
-        <button class='btn btn-info' data-dismiss='modal'>Save changes</button</button>
+        <button class='btn btn-info' data-dismiss='modal'>Save changes</button>
       </div>
     </div>
   </div>
