--- a/problem/templates/problem/problem.html
+++ b/problem/templates/problem/problem.html
@@ -78,15 +78,16 @@
   <div class='input-group' style='float:right;width:30%'>
     <input type='text' id='newTag' class='form-control' width='25%'>
     <span class='input-group-btn'>
-                <button id='addTagButton' onclick="return addTag()" class='btn btn-default'>Add Tag</button>
-            </span>
+      <button id='addTagButton' onclick="return addTag()" class='btn btn-default'>Add Tag</button>
+    </span>
   </div>
 
   <br>
   <br>
   <br>
-  <h4><a onclick="alert('Discuss not open yet')">Discuss</a>
-        </h4>
+  <h4>
+    <a onclick="alert('Discuss not open yet')">Discuss</a>
+  </h4>
   <br>
   <br>
   <br>
