--- a/problem/templates/problem/editTab/info.html
+++ b/problem/templates/problem/editTab/info.html
@@ -1,21 +1,44 @@
+<!--
+The MIT License (MIT)
+
+Copyright (c) 2014 NTHUOJ team
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+-->
 <table>
   <tr>
     <th style="width:20%">Problem Name:</th>
     <td>
       <input class="form-control" name="probName">
-      </td>
+    </td>
   </tr>
   <tr>
     <th style="width:20%">Owner:</th>
     <td>
       <input class="form-control" name="owner">
-      </td>
+    </td>
   </tr>
   <tr>
     <th style="width:20%">Visible:</th>
     <td>
       <input type="checkbox" value="visible" name='visible'>
-      </td>
+    </td>
   </tr>
   <tr>
     <th style="width:20%">Judge Source:</th>
@@ -27,19 +50,19 @@
         <option>ZOJ</option>
         <option>UVA</option>
       </select>
-      </td>
+    </td>
   </tr>
   <tr>
     <th style="width:20%">Real ID:</th>
     <td>
       <input class="form-control" name='realID'>
-      </td>
+    </td>
   </tr>
   <tr>
     <th style="width:20%">Problem Page:</th>
     <td>
       <input class="form-control" name='probPage'>
-      </td>
+    </td>
   </tr>
   <tr>
     <th style="width:20%">Special Judge:</th>
@@ -47,7 +70,7 @@
       <input type="radio" name="special" value='no'>No&nbsp;
       <input type="radio" name="special" value='c'>C&nbsp;
       <input type="radio" name="special" value='cpp'>C++
-      </td>
+    </td>
   </tr>
   <tr>
     <th>Floating Point Error:</th>
