--- a/contest/templates/contest/contest.html
+++ b/contest/templates/contest/contest.html
@@ -143,11 +143,11 @@ SOFTWARE.
               <span aria-hidden="true">&times;</span>
               <span class="sr-only">Close</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">提問</h4>
+            <h4 class="modal-title" id="myModalLabel">Ask Question</h4>
           </div>
           <div class="modal-body">
             <form role="form">
-              <label for="pid">題號</label>
+              <label for="pid">Problem name</label>
               <div id="pid" class="form-group">
                 <select class="form-control">
                   {% for problem in contest.problem_list %}
@@ -156,12 +156,12 @@ SOFTWARE.
                 </select>
               </div>
               <div class="form-group">
-                <label for="exampleInputPassword1">描述</label>
-                <textarea type="text" class="form-control" id="exampleInputPassword1" placeholder="問題描述"></textarea>
+                <label for="exampleInputPassword1">Description</label>
+                <textarea type="text" class="form-control" id="exampleInputPassword1" placeholder="Problem Description"></textarea>
               </div>
               <div class="checkbox">
                 <label>
-                  <input type="checkbox">僅限發問者觀看結果
+                  <input type="checkbox">For All Teams
                 </label>
               </div>
             </form>
